# django4-todo

./: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  sonar-project.properties  supervisord.conf  uptime-check.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  requirements.txt
.github/scripts/: check_checklist.py  requirements.txt
.github/workflows/: build_and_test.yaml  python_build_and_test.yaml  reviews.yaml
Postman/: Todo.postman_collection.json
app/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configMap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml
chart/templates/tests/: test-connection.yaml
component/jenkins/: pipeline.groovey
src/: manage.py  requirements.txt  sonar-project.properties
src/oidc_app/: asgi.py  settings.py  urls.py  wsgi.py
src/todo/: models.py  serializers.py  urls.py  views.py
src/todo/migrations/: 0001_initial.py  0002_alter_todo_create_date_alter_todo_task_and_more.py
todo/: settings.py  urls.py
